--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Status of Local Administrative Units (LAUs) in Southern Europe
 description: Interactive maps of LAUs in Greece, Italy, Portugal, and Spain.
 url: "https://andremarinha.github.io"
-baseurl: "/LAU_Maps"
+baseurl: "/LAU_maps"
 
 theme: jekyll-theme-minimal
 plugins:
